# storytelling

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CNAME  IMPLEMENTATION_PLAN_BaseContext_Extraction.md  KINSHIP.md  LAUNCH_CLAUDE_Issue_Preparation_251008.sh  LAUNCH_rispecs_251015.sh  MISSION_251231.md  Makefile  NARINTEL_QUICK_START.md  NARINTEL_README.md  NARINTEL_USER_SCENARIOS.md  README.md  README_STORYTELLING.md  RISPECS.md  TUSHELL.md  __.md  context7.json  interactive_storytelling.sh  launch_storytelling.sh  llms-full.txt  llms.txt  pyproject.toml  release.sh
.github/: copilot-instructions.md
.pde/: 1d7408e5-caaf-4f0d-b74f-ee6bf62c5be5.json  1d7408e5-caaf-4f0d-b74f-ee6bf62c5be5.md  70023a74-c847-4744-a148-1036b241bc41.json  70023a74-c847-4744-a148-1036b241bc41.md  c9f4a2b7-3d1e-4c8f-a6b5-7e9d2f0c3a1b.json  c9f4a2b7-3d1e-4c8f-a6b5-7e9d2f0c3a1b.md  d8e3b5f1-2c9a-4d7e-b0f3-1a5c8e6d2b4f.json  d8e3b5f1-2c9a-4d7e-b0f3-1a5c8e6d2b4f.md
.tushell/: 260301.md
__llms/: aistudio_mcp_tools.py  aistudio_playwright_helper.py  llms-claude-agent-sdk-v2.md  llms-coaiapy-langfuse-tracing-best-practices.md  llms-managerial-moment-of-truth.md  llms-rise-framework.txt  llms-storytelling.txt  sync_llms_ordered.py  v0-deployer.py
generated_stories/winter_solstice/: README.md
issues/21-22-23/: plan.md
issues/24/: plan.md
js/: LICENSE  README.md  mcp.json  package-lock.json  package.json
js/src/: analytical-feedback-loop.ts  ceremonial-diary.ts  config.ts  core.ts  emotional-beat-enricher.ts  index.ts  llm-providers.ts  logger.ts  narrative-intelligence.ts  narrative-story-graph.ts  narrative-tracing.ts  (+4 more)
knowledge_base/: ceremonial_research_practices.md  indigenous_knowledge_systems.md  traditional_technologies.md  two_eyed_seeing_knowledge.md
mcp/: RELEASE.md  __init__.py  pyproject.toml  server.py
rispecs/: AGENT_INSTRUCTIONS.md  Analytical_Feedback_Loop_Specification.md  ApplicationLogic.md  ApplicationLogic_Diagrams.md  Architect_Agent_Specification.md  COORDINATION_FROM_NARINTEL_INSTANCE.md  COORDINATION_FROM_STORYTELLING_INSTANCE.md  CO_Lint_Spec.md  Character_Arc_Tracking_Specification.md  Configuration.md  Creative_Environment_Serialization.md  Creative_Orientation_Operating_Guide.md  DataSchemas.md  Emotional_Beat_Enrichment_Specification.md  Enhanced_Multi_Source_RAG_Specification.md  IAIP_Integration_Specification.md  ImplementationNotes.md  KnowledgeBase_Extension.md  LLM_Provider_Specification.md  Logging_And_Traceability_Specification.md  NCP_IMPLEMENTATION_STATUS.md  Narrative_Aware_Story_Graph_Specification.md  Narrative_Intelligence_Integration_Specification.md  Outline_Level_RAG_Integration_SpecificationV1.md  Outline_Level_RAG_Integration_SpecificationV3.md  Outline_Stage_RAG_Injection.md  ProceduralLogic.md  Prompts.md  RAG_Implementation_Specification.md  RISE_Spec.md  Resume_Current_Session_Semantics.md  Session_Management_Architecture.md  Terms_of_Agreement.md  TestPreset_3Chapter.md  Tiered_Package_Architecture.md
scripts/: LAUNCH_claude_North_Practices_250923.sh  LAUNCH_rispecs_251015.sh  LAUNCH_trading_story_generation.sh  init.sh  release.sh
story_prompts/: 01_spiral_of_memory.txt  02_two_eyed_seeing.txt  03_dream_architect.txt
storytelling/: __init__.py  analytical_feedback_loop.py  ceremonial_diary.py  cli.py  coaia_fuse.py  config.py  data_models.py  emotional_beat_enricher.py  enhanced_rag.py  graph.py  iaip_bridge.py  llm_providers.py  logger.py  narrative_intelligence_integration.py  narrative_story_graph.py  narrative_tracing.py  openrouter_patch.py  prompts.py  rag.py  role_tooling.py  session_manager.py  web_fetcher.py
tests/: __init__.py  test_cli.py  test_narrative_intelligence.py
(+12 files in other folders)
